# Zelfstandige-vroedvrouw-boekhouden

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.specify/memory/: constitution.md
.streamlit/: config.toml
config/: accounts.yaml  categories.yaml  rules.yaml  settings.yaml
data/: 2025_transacties_complete.xlsx  2025_transactions_consolidated.csv
data/2024/: Resultatenrekening Vroedvrouw Goedele 2024.xlsx
data/2025/: BE05 0636 4778 9475 2025-12-05 13-19-28 1.csv  BE05 0636 4778 9475 2025-12-10 14-38-51 1 (1).csv  BE05 0636 4778 9475 2026-01-02 08-58-59 1.csv  BE05 0682 4812 1175 2025-12-13 19-01-36 1.csv  Resultatenrekening Vroedvrouw Goedele 2025.xlsx
specs/001-2025-transaction-import/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-transaction-categorization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-asset-depreciation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-financial-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-report-warnings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-streamlit-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-session-state-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/lib/: belgian_numbers.py
src/models/: __init__.py  account.py  asset.py  rule.py  (+5 more)
tests/: __init__.py
(+25 files in other folders)
